frontend/test/should_fail/keepOneForEach_match_class_unknown_entity.grg
match class mc
{
	def var i:int;
	def var j:int;
} \ keepOneForEach<k>Accumulate<j>By<sum>
